--- a/pages/index.html
+++ b/pages/index.html
@@ -191,7 +191,7 @@
                         <li>
                             <a href="#">
                                 <div>
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
+                                    <i class="fa fa-comment fa-fw"></i> PTR
                                     <span class="pull-right text-muted small">4 minutes ago</span>
                                 </div>
                             </a>
